--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,16 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
+library(tidyverse)
+library(googlesheets4)
+
+gs4_deauth()
+
+event_reg <- read_sheet("https://docs.google.com/spreadsheets/d/1Iqxq3Eb5xh_BIiLf3GOokuC9JWdOBVUycUQa-rWiWiA/edit?usp=sharing")
+
+event_reg %>%
+  write_rds("data/event_reg.rds")
+
 barplot(table(event_reg$`Dietary restrictions`))
 
 
@@ -30,5 +40,33 @@ library()
 DT::datatable(event_reg)
 ```
 
+```{r}
+library(ggplot2)
+library(plotly)
+
+# Create the ggplot object
+p <- ggplot(data = event_reg, aes(x = `Dietary restrictions`, fill = `Dietary restrictions`)) +
+  geom_bar() +
+  coord_flip() +
+  theme_minimal() +
+  labs(
+    x = "Dietary Restrictions",
+    y = "Count",
+    title = "Distribution of Dietary Restrictions"
+  ) +
+  theme(
+    plot.title = element_text(size = 16, face = "bold", hjust = 0.5),  # Center the title
+    axis.title.x = element_text(size = 12),
+    axis.title.y = element_text(size = 12),
+    axis.text = element_text(size = 10),
+    legend.title = element_blank(),
+    legend.text = element_text(size = 10),
+    legend.position = "none"
+  )
+
+# Convert ggplot object to interactive plot
+ggplotly(p)
+
+```
 
 
