--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r, echo=FALSE}
 library(tidyverse)
 library(googlesheets4)
 
@@ -25,7 +25,7 @@ barplot(table(event_reg$`Dietary restrictions`))
 
 ```
 
-```{r}
+```{r, echo=FALSE}
 library(tidyverse)
 
 ggplot(
@@ -35,12 +35,12 @@ ggplot(
   coord_flip()
 ```
 
-```{r}
+```{r, echo=FALSE}
 library()
 DT::datatable(event_reg)
 ```
 
-```{r}
+```{r, echo=FALSE}
 library(ggplot2)
 library(plotly)
 
