--- a/index.Rmd
+++ b/index.Rmd
@@ -10,14 +10,14 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 # R PACKAGES
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 library(tidyverse)
 library(plotly)
 library(RSocrata)
 ```
 
 # READ DATA
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 # covid_df <- read.csv("https://data.cdc.gov/resource/5jp2-pgaw.csv")
 
 covid_df <- read.socrata("https://data.cdc.gov/resource/5jp2-pgaw.csv")
@@ -27,7 +27,7 @@ covid_df$dtstamp = Sys.time()
 ```
 
 # DATA CLEANING
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 covid_df %>%
   select(
     -c(1:3, 6, 10:22, 25, 26, 29:33)
@@ -55,7 +55,7 @@ covid.df2$State <- toupper(covid.df2$State)
 
 # DATA EXPLORATION
 ## What are the states and territories in US with the highest number of vaccination providers?
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 # Explore the distribution of providers by states and territories
 state_counts_all <- covid.df2 %>%
   group_by(State) %>%
@@ -63,7 +63,7 @@ state_counts_all <- covid.df2 %>%
 ```
 
 # VISUALIZATION
-```{r, echo=FALSE}
+```{r, echo=FALSE, include=FALSE}
 # Plotting the distribution of vaccine providers by state and territories
 plot <- ggplot(state_counts_all, aes(x = State, y = provider_count)) +
   geom_bar(stat = "identity", fill = "steelblue") +
