--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Covid Vaccine Distribution.rmd"
+title: "Covid Vaccine Distribution"
 author: "Godfrey"
-date: "Sys.Data()"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
@@ -9,15 +9,17 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-# R PACKAGES
+
 ```{r, echo=FALSE, include=FALSE}
+# R PACKAGES
 library(tidyverse)
 library(plotly)
 library(RSocrata)
 ```
 
-# READ DATA
+
 ```{r, echo=FALSE, include=FALSE}
+# READ DATA
 # covid_df <- read.csv("https://data.cdc.gov/resource/5jp2-pgaw.csv")
 
 covid_df <- read.socrata("https://data.cdc.gov/resource/5jp2-pgaw.csv")
@@ -26,8 +28,9 @@ covid_df <- read.socrata("https://data.cdc.gov/resource/5jp2-pgaw.csv")
 covid_df$dtstamp = Sys.time()
 ```
 
-# DATA CLEANING
+
 ```{r, echo=FALSE, include=FALSE}
+# DATA CLEANING
 covid_df %>%
   select(
     -c(1:3, 6, 10:22, 25, 26, 29:33)
@@ -53,17 +56,19 @@ covid.df2 <- covid.df1 %>%
 covid.df2$State <- toupper(covid.df2$State)
 ```
 
+
+```{r, echo=FALSE, include=FALSE}
 # DATA EXPLORATION
 ## What are the states and territories in US with the highest number of vaccination providers?
-```{r, echo=FALSE, include=FALSE}
 # Explore the distribution of providers by states and territories
 state_counts_all <- covid.df2 %>%
   group_by(State) %>%
   summarise(provider_count = n())
 ```
 
+
+```{r, echo=FALSE}
 # VISUALIZATION
-```{r, echo=FALSE, include=FALSE}
 # Plotting the distribution of vaccine providers by state and territories
 plot <- ggplot(state_counts_all, aes(x = State, y = provider_count)) +
   geom_bar(stat = "identity", fill = "steelblue") +
