--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Covid Vaccine Distribution"
 author: "Godfrey"
-date: "`r Sys.Date()`"
+date: "`r Sys.time()`"
 output: html_document
 ---
 
